# Infinite-Sketch

./: .eslintrc.js  .prettierrc.js  LICENSE  LICENSE.txt  README.md  components.json  index.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  preload.js  prettier.config.cjs  tailwind.config.cjs  tailwind.config.js  vite.config.ts
.erb/configs/: postcss.config.js  webpack.config.preload.dev.ts  webpack.config.renderer.dev.ts  webpack.config.renderer.prod.ts
.erb/scripts/: check-build-exists.ts
.github/workflows/: main.yml
app/: index.html
app/javascript/: handleFileUpload.js  imagePlayer.js  renderFiles.js  timer.js
app/styles/: main.css  main.css.map  main.scss  mystyles.css  mystyles.css.map  mystyles.scss  style.css
release/app/: package-lock.json  package.json
src/: App.tsx  AppContextMenu.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/apis/: files.ts  index.ts  os.ts  shortcuts.ts  window.ts
src/components/: index.ts
src/constants/: index.ts  intervals.ts  keys.ts  theme.ts
src/enums/: menuActions.ts
src/hooks/: index.ts
src/main/: detectPlatform.ts  main.js  main.ts  menu.ts  preload.js  preload.ts  util.js  util.ts
src/models/: folders.ts  index.ts  os.ts  playModes.ts  player.ts  shuffle.ts  theme.ts
src/renderer/: App.css  App.jsx  App.tsx  index.ejs  index.tsx  preload.d.ts  types.ts
src/store/: appStore.ts  common.ts  foldersStore.tsx  index.ts  playerStore.tsx  sessionStore.ts  systemStore.ts
src/utils/: index.ts  (+5 more)
(+91 files in other folders)
