[package]
name = "infinite-sketch"
version = "2.0.0"
description = ""
authors = ["Musaad Alqubayl"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
raw-window-handle = "0.3.3"
cocoa = "0.24.0"

[dependencies]
tauri = { version = "1.4", features = [ "macos-private-api", "window-set-ignore-cursor-events", "window-set-always-on-top", "global-shortcut-all", "window-set-decorations", "protocol-all", "fs-read-dir", "path-all", "dialog-open", "shell-open", "updater"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-persisted-scope = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" ,features = ["protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
